Quick code cleanup on all the files